MODON MRE BPDEV/force-app/main/default/objects/UserAccess__c/UserAccess__c.object-meta.xml
<CustomObject>
    <label>UserAccess</label>
    <nameField>
        <displayFormat>UA-{0000000000}</displayFormat>
        <label>UserAccess Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>UserAccess</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>