MODON MRE BPDEV/force-app/main/default/objects/UserAccess__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>UserAccess</relationshipLabel>
    <relationshipName>UserAccess</relationshipName>
    <type>Lookup</type>
</CustomField>