MODON MRE BPDEV/force-app/main/default/objects/UserAccess__c/fields/FirstTimeLogin__c.field-meta.xml
<CustomField>
    <fullName>FirstTimeLogin__c</fullName>
    <defaultValue>true</defaultValue>
    <label>FirstTimeLogin</label>
    <type>Checkbox</type>
</CustomField>