MODON MRE BPDEV/force-app/main/default/objects/UserAccess__c/fields/GeneratedPassword__c.field-meta.xml
<CustomField>
    <fullName>GeneratedPassword__c</fullName>
    <label>GeneratedPassword</label>
    <length>16</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>