MODON MRE BPDEV/force-app/main/default/objects/UserAccess__c/fields/Resend_Password__c.field-meta.xml
<CustomField>
    <fullName>Resend_Password__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Resend Password</label>
    <type>Checkbox</type>
</CustomField>