MODON MRE BPDEV/force-app/main/default/objects/UserAccess__c/fields/Username__c.field-meta.xml
<CustomField>
    <fullName>Username__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Username</label>
    <length>255</length>
    <type>Text</type>
</CustomField>